--- a/jd首页.html
+++ b/jd首页.html
@@ -500,7 +500,12 @@
         <!--二级菜单-->
 
         <div class="big-logo">
-            <img src="img/big-logo.jpg" alt="大广告">
+            <img src="img/1.jpg" alt="大广告1">
+            <img src="img/2.jpg" alt="大广告2">
+            <img src="img/3.jpg" alt="大广告3">
+            <img src="img/4.jpg" alt="大广告4">
+            <img src="img/5.jpg" alt="大广告5">
+            <img src="img/6.jpg" alt="大广告6">
             <ul class="circle">
                 <li> 1 </li>
                 <li> 2 </li>
@@ -508,8 +513,9 @@
                 <li> 4 </li>
                 <li> 5 </li>
                 <li> 6 </li>
-
             </ul>
+            <button class=" button-union left-button"> < </button>
+            <button class="button-union right-button"> > </button>
         </div>
 
         <div class="news">
