--- a/jd首页.html
+++ b/jd首页.html
@@ -507,12 +507,12 @@
             <img src="img/5.jpg" alt="大广告5">
             <img src="img/6.jpg" alt="大广告6">
             <ul class="circle">
-                <li> 1 </li>
-                <li> 2 </li>
-                <li> 3 </li>
-                <li> 4 </li>
-                <li> 5 </li>
-                <li> 6 </li>
+                <li class="before"> 1 </li>
+                <li class="before"> 2 </li>
+                <li class="before"> 3 </li>
+                <li class="before"> 4 </li>
+                <li class="before"> 5 </li>
+                <li class="before"> 6 </li>
             </ul>
             <button class=" button-union left-button"> < </button>
             <button class="button-union right-button"> > </button>
