--- a/jd首页.html
+++ b/jd首页.html
@@ -113,7 +113,7 @@
             <div class="key-links">
 
                 <ul>
-                    <li><a href=""> 服装城 </a></li>
+                    <li> <a href=""> 服装城 </a></li>
                     <li><a href="">  美妆馆</a></li>
                     <li><a href="">  京东超市</a></li>
                     <li><a href=""> 生鲜 </a></li>
@@ -137,9 +137,10 @@
     <div id="main-mid">
      <div class="list">
       <ul>
-          <li><a href="">家用电器  </a>
+          <div><li><a href="">家用电器  </a>
             <span> &gt;</span>
           </li>
+          </div>
           <li><a href=""> 手机、运营商、数码 </a>
               <span> &gt;</span>
           </li>
