--- a/jd首页.html
+++ b/jd首页.html
@@ -21,31 +21,86 @@
     </div>
 
     <div class="top-right">
-        <ul>
+        <ul class="title-service">
             <li>
-                <a href="">您好，请登录</a>
-                <a href=""  class="red-font">免费注册</a>
+                <div class="dd-text">
+                    <a href="">您好，请登录</a>
+                    <a href=""  class="red-font">免费注册</a>
+                </div>
             </li>
             <li class="spacer"></li>
-            <li><a href="">我的订单</a></li>
+            <li>
+                <div class="dd-text"><a href="">我的订单</a></div>
+            </li>
             <li class="spacer"></li>
-            <li >我的京东
+            <li class="detail-down" >
+                <div class="dd-text">我的京东</div>
+                <div id="myjd" class="down">
+                    <div class="please-log">
+                        <div class="log-pic">
+                            <a href=""><img src="img/myjd_.jpg" alt="求图像" width="60px" height="60px"></a>
+                        </div>
+                        <div class="log-text">
+                            <p class="boldfont"><a href="">你好，请登录</a></p>
+                            <p><a href="">优惠券</a>|<a href="">消息</a></p>
+                        </div>
+                    </div>
+                    <div class="myjd-link">
+                        <div class="link-left">
+                            <ul>
+                                <li><a href="https://www.jd.com">代处理订单  </a></li>
+                                <li><a href="https://www.jd.com"> 我的问答 </a></li>
+                                <li><a href="https://www.jd.com"> 降价商品 </a></li>
+                                <li><a href="https://www.jd.com">返修退换货  </a></li>
+                            </ul>
+                        </div>
+                        <div class="link-right">
+                            <ul>
+                                <li><a href=""> 我的关注 </a></li>
+                                <li><a href="">我的京豆  </a></li>
+                                <li><a href=""> 我的理财 </a></li>
+                                <li><a href=""> 京东白条 </a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="spacer"></li>
+            <li><div class="dd-text"><a href="">京东会员</a></div></li>
+            <li class="spacer"></li>
+            <li><div class="dd-text"><a href="">企业采购</a></div></li>
+            <li class="spacer"></li>
+            <li class="detail-down">
+                <div class="dd-text">
+                <div class="phone" >
+                <span>手机京东</span>
+                </div>
+                    <div id="phonejd" class="down">
+                        <img src="img/关注京东二维码.jpg" alt="">
+                    </div>
+                </div>
+            </li>
+            <li class="spacer"></li>
+            <li class="detail-down">
+                <div class="dd-text">关注京东</div>
+                <div id="concertjd" class="down">
+                    <img src="img/关注京东二维码.jpg" alt="">
+                </div>
+            </li>
+            <li class="spacer"></li>
+            <li class="detail-down">
+                <div class="dd-text">客户服务</div>
+                <div id="guestService" class="down">
+                    <img src="img/关注京东二维码.jpg" alt="">
+                </div>
+            </li>
+            <li class="spacer"></li>
+            <li class="detail-down">
+                <div class="dd-text">网站导航</div>
+                <div id="webGuid" class="down"></div>
+            </li>
 
-            </li>
-            <li class="spacer"></li>
-            <li><a href="">京东会员</a></li>
-            <li class="spacer"></li>
-            <li><a href="">企业采购</a></li>
-            <li class="spacer"></li>
-            <li class="phone"><span>手机京东</span></li>
-            <li class="spacer"></li>
-            <li>关注京东</li>
-            <li class="spacer"></li>
-            <li>客户服务</li>
-            <li class="spacer"></li>
-            <li>网站导航</li>
         </ul>
-
     </div>
     </div>
 </div>
@@ -137,56 +192,85 @@
     <div id="main-mid">
      <div class="list">
       <ul>
-          <div><li><a href="">家用电器  </a>
-            <span> &gt;</span>
-          </li>
+          <div>
+              <li>
+                     <a href="">家用电器  </a>
+                     <span> &gt;</span>
+                </li>
           </div>
+
+          <div>
           <li><a href=""> 手机、运营商、数码 </a>
               <span> &gt;</span>
           </li>
+          </div>
+          <div>
           <li><a href=""> 电脑、办公</a>
               <span> &gt;</span>
           </li>
+          </div>
+          <div>
           <li><a href="">家具、家具、家装、厨具  </a>
               <span> &gt;</span>
           </li>
+          </div>
+          <div>
           <li><a href="">男装、女装、童装、内衣  </a>
               <span> &gt;</span>
           </li>
+          </div>
+          <div>
           <li><a href="">个性化妆、清洁用品、宠物  </a>
               <span> &gt;</span>
           </li>
+          </div>
+          <div>
           <li><a href=""> 鞋靴、箱包、珠宝、奢侈品 </a>
               <span> &gt;</span>
           </li>
+          </div>
+          <div>
           <li><a href="">运动、户外、钟表  </a>
               <span> &gt;</span>
           </li>
+          </div>
+          <div>
           <li><a href=""> 汽车、汽车用品 </a>
               <span> &gt;</span>
           </li>
+          </div>
+          <div>
           <li><a href=""> 母婴、玩具乐器 </a>
               <span> &gt;</span>
           </li>
+          </div>
+          <div>
           <li><a href="">食品、酒类、生鲜、特产  </a>
               <span> &gt;</span>
           </li>
+          </div>
+          <div>
           <li><a href="">  医药保健</a>
               <span> &gt;</span>
           </li>
+          </div>
+          <div>
           <li><a href=""> 图书、音像、电子书 </a>
               <span> &gt;</span>
           </li>
+          </div>
+          <div>
           <li><a href=""> 彩票、旅行、充值、票务 </a>
               <span> &gt;</span>
           </li>
+          </div>
+          <div>
           <li><a href=""> 理财、重筹、白条、保险 </a>
               <span> &gt;</span>
           </li>
+          </div>
       </ul>
-
      </div>
-
 
         <!--二级菜单1-->
         <div class="level2">
@@ -501,12 +585,16 @@
         <!--二级菜单-->
 
         <div class="big-logo">
+            <div>
             <img src="img/1.jpg" alt="大广告1">
             <img src="img/2.jpg" alt="大广告2">
             <img src="img/3.jpg" alt="大广告3">
             <img src="img/4.jpg" alt="大广告4">
             <img src="img/5.jpg" alt="大广告5">
             <img src="img/6.jpg" alt="大广告6">
+                <button class="button-union left-button"> < </button>
+                <button class="button-union right-button"> > </button>
+            </div>
             <ul class="circle">
                 <li class="before"> 1 </li>
                 <li class="before"> 2 </li>
@@ -515,8 +603,7 @@
                 <li class="before"> 5 </li>
                 <li class="before"> 6 </li>
             </ul>
-            <button class=" button-union left-button"> < </button>
-            <button class="button-union right-button"> > </button>
+
         </div>
 
         <div class="news">
@@ -555,13 +642,50 @@
         </div>
 
         <div id="mid-logo">
-            <ul>
-                <li><a href=""> <img src="img/金秋.png" alt=""> </a> </li>
-                <li class="space"><a href=""> <img src="img/鞋子.png" alt=""> </a> </li>
-                <li class="space"><a href=""> <img src="img/鞋子.png" alt=""> </a> </li>
-                <li class="space"><a href=""> <img src="img/鞋子.png" alt=""> </a> </li>
-                <li class="space"><a href=""> <img src="img/鞋子.png" alt=""> </a> </li>
-            </ul>
+            <div class="logo-first"><a href=""> <img src="img/金秋.png" alt=""> </a></div>
+            <div class="logo-run">
+
+                <button class="btn left-btn"> < </button>
+                <button class="btn right-btn"> > </button>
+                <!--第一组-->
+                <div class="pic-4 special">
+                    <ul  >
+                        <li class="space"><a href=""> <img src="img/书.jpg" alt=""> </a> </li>
+                        <li class="space"><a href=""> <img src="img/nike闪购7.jpg" alt=""> </a> </li>
+                        <li class="space"><a href=""> <img src="img/鞋子.png" alt=""> </a> </li>
+                        <li class="space"><a href=""> <img src="img/iphone7.jpg" alt=""> </a> </li>
+                    </ul>
+                </div>
+                <!--第2组-->
+                <div class="pic-4">
+                    <ul  >
+                        <li class="space"><a href=""> <img src="img/榨汁机.jpg" alt=""> </a> </li>
+                        <li class="space"><a href=""> <img src="img/张君雅.jpg" alt=""> </a> </li>
+                        <li class="space"><a href=""> <img src="img/榨汁机.jpg" alt=""> </a> </li>
+                        <li class="space"><a href=""> <img src="img/榨汁机.jpg" alt=""> </a> </li>
+                    </ul>
+                </div>
+                <!--第三组-->
+                <div class="pic-4">
+                    <ul  >
+                        <li class="space"><a href=""> <img src="img/电视.jpg" alt=""> </a> </li>
+                        <li class="space"><a href=""> <img src="img/张君雅.jpg" alt=""> </a> </li>
+                        <li class="space"><a href=""> <img src="img/电视.jpg" alt=""> </a> </li>
+                        <li class="space"><a href=""> <img src="img/电视.jpg" alt=""> </a> </li>
+                    </ul>
+                </div>
+
+                <!--第4组-->
+                <div class="pic-4">
+                    <ul  >
+                        <li class="space"><a href=""> <img src="img/烤箱.jpg" alt=""> </a> </li>
+                        <li class="space"><a href=""> <img src="img/张君雅.jpg" alt=""> </a> </li>
+                        <li class="space"><a href=""> <img src="img/烤箱.jpg" alt=""> </a> </li>
+                        <li class="space"><a href=""> <img src="img/烤箱.jpg" alt=""> </a> </li>
+                    </ul>
+                </div>
+
+            </div>
         </div>
 
     </div>
@@ -857,6 +981,128 @@
 
 <!--家电大促 banner  结束-->
 
+<!--天天低价开始-->
+<div id="dayT">
+    <h2 class="dayT-left">天天低价</h2>
+    <h2 class="dayT-right" >热门晒单</h2>
+</div>
+
+<div id="dayP">
+  <div class="dayP-left">
+      <div class="contain1">
+      <a href=""><img src="img/d1.jpg" alt="【京东配送】凯美源（KAIMEIYUAN）111"></a>
+      <p> <a href=""> 【京东配送】凯美源（KAIMEIYUAN）</a> </p>
+      <p class="red-money">￥179.00 </p>
+      </div>
+  </div>
+    <div class="dayP-mid">
+        <div class="dayP-mid-1">
+            <div class="pic-posi">
+                <a href=""><img src="img/d2.jpg" alt=""></a>
+            </div>
+                <div class="text">
+                    <p> <a href=""> 琪达利2016秋冬装新款女装吊带</a> </p>
+                    <p class="red-money">￥88.00 </p>
+                </div>
+
+        </div>
+        <div class="dayP-mid-2">
+            <div class="pic-posi">
+                <a href=""><img src="img/d3.jpg" alt=""></a>
+            </div>
+                <div class="text">
+                    <p> <a href=""> 琪达利2016秋冬装新款女装吊带</a> </p>
+                    <p class="red-money">￥88.00 </p>
+                </div>
+        </div>
+
+    </div>
+    <div class="dayP-mid">
+        <div class="dayP-mid-1">
+            <div class="pic-posi">
+                <a href=""><img src="img/d4.jpg" alt=""></a>
+            </div>
+            <div class="text">
+                <p> <a href="">【简约套装版】魅族 魅蓝3S 全网通公开版
+                     </a> </p>
+                <p class="red-money">￥799.00 </p>
+            </div>
+        </div>
+        <div class="dayP-mid-2">
+            <div class="pic-posi">
+                <a href=""><img src="img/d5.jpg" alt=""></a>
+            </div>
+            <div class="text">
+                <p> <a href="">优依密斯2016秋冬新款时尚蕾丝 </a> </p>
+                <p class="red-money">￥108.00 </p>
+            </div>
+        </div>
+    </div>
+    <div class="dayP-mid">
+        <div class="dayP-mid-1">
+            <div class="pic-posi">
+                <a href=""><img src="img/d6.jpg" alt=""></a>
+            </div>
+            <div class="text">
+                <p> <a href="">heisou 650ml耐热玻璃透明过滤 </a> </p>
+                <p class="red-money">￥49.00 </p>
+            </div>
+        </div>
+        <div class="dayP-mid-2">
+            <div class="pic-posi">
+                <a href=""><img src="img/d7.png" alt=""></a>
+            </div>
+            <div class="text">
+                <p> <a href="">丁格菲2016秋季新品时尚名媛优 </a> </p>
+                <p class="red-money">￥128.00 </p>
+            </div>
+        </div>
+    </div>
+    <div class="dayP-right">
+        <div class="run-box">
+        <ul class="run-ul">
+
+            <li class="distance">
+                <div class="run-pic">
+                    <a href=""><img src="img/d8.jpg" alt="" width="80px" height="80px"></a>
+                </div>
+                <div class="run-text">
+                    <div class="run-name">
+                        <img src="img/head.jpg" alt="头像">
+                        <span>用户名1</span>
+                    </div>
+                    <div class="run-mess">
+                        <a href=""> 打印机用着很不错呀</a>
+                    </div>
+                </div>
+            </li>
+
+            <li class="distance">
+                <div class="run-pic">
+                    <a href=""><img src="img/d9.jpg" alt="" width="80px" height="80px"></a>
+                </div>
+                <div class="run-text">
+                    <div class="run-name">
+                        <img src="img/head2.jpg" alt="头像">
+                        <span>用户名2</span>
+                    </div>
+                    <div class="run-mess">
+                        <a href=""> 速度很快，有活动价格</a>
+                    </div>
+                </div>
+            </li>
+
+
+        </ul>
+        </div>
+
+    </div>
+
+</div>
+
+
+
+<!--天天低价结束-->
 <!--底部 slogan 开始-->
 <div id="slogan-box">
     <div id="slogan">
