--- a/jd首页.html
+++ b/jd首页.html
@@ -1061,6 +1061,20 @@
     <div class="dayP-right">
         <div class="run-box">
         <ul class="run-ul">
+            <li class="distance">
+                <div class="run-pic">
+                    <a href=""><img src="img/d11.jpg" alt="" width="80px" height="80px"></a>
+                </div>
+                <div class="run-text">
+                    <div class="run-name">
+                        <img src="img/head4.jpg" alt="头像">
+                        <span>用户名2</span>
+                    </div>
+                    <div class="run-mess">
+                        <a href=""> 这是图片2</a>
+                    </div>
+                </div>
+            </li>
 
             <li class="distance">
                 <div class="run-pic">
@@ -1072,7 +1086,7 @@
                         <span>用户名1</span>
                     </div>
                     <div class="run-mess">
-                        <a href=""> 打印机用着很不错呀</a>
+                        <a href=""> 这是图片1</a>
                     </div>
                 </div>
             </li>
@@ -1084,23 +1098,63 @@
                 <div class="run-text">
                     <div class="run-name">
                         <img src="img/head2.jpg" alt="头像">
-                        <span>用户名2</span>
+                        <span>用户名4</span>
                     </div>
                     <div class="run-mess">
-                        <a href=""> 速度很快，有活动价格</a>
+                        <a href=""> 这是图片4</a>
                     </div>
                 </div>
             </li>
 
+            <li class="distance">
+                <div class="run-pic">
+                    <a href=""><img src="img/d10.jpg" alt="" width="80px" height="80px"></a>
+                </div>
+                <div class="run-text">
+                    <div class="run-name">
+                        <img src="img/head3.jpg" alt="头像">
+                        <span>用户名3</span>
+                    </div>
+                    <div class="run-mess">
+                        <a href="">这是图片3</a>
+                    </div>
+                </div>
+            </li>
+
+            <li class="distance">
+                <div class="run-pic">
+                    <a href=""><img src="img/d11.jpg" alt="" width="80px" height="80px"></a>
+                </div>
+                <div class="run-text">
+                    <div class="run-name">
+                        <img src="img/head4.jpg" alt="头像">
+                        <span>用户名2</span>
+                    </div>
+                    <div class="run-mess">
+                        <a href=""> 这是图片2</a>
+                    </div>
+                </div>
+            </li>
+
+            <li class="distance">
+                <div class="run-pic">
+                    <a href=""><img src="img/d8.jpg" alt="" width="80px" height="80px"></a>
+                </div>
+                <div class="run-text">
+                    <div class="run-name">
+                        <img src="img/head.jpg" alt="头像">
+                        <span>用户名1</span>
+                    </div>
+                    <div class="run-mess">
+                        <a href=""> 这是图片1</a>
+                    </div>
+                </div>
+            </li>
 
         </ul>
         </div>
-
     </div>
-
 </div>
-
-
 
 <!--天天低价结束-->
 <!--底部 slogan 开始-->
